# didwebvh-test-suite

./: .dockerignore  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.claude/: settings.json
implementations/dart/: Dockerfile  config.yaml  diffs.txt  docker-entrypoint.sh  gen_results.json  pubspec.yaml  status.md
implementations/java/: Dockerfile  README.md  config.yaml  diffs.txt  docker-entrypoint.sh  pom.xml  status.md
implementations/java-eecc/: Dockerfile  README.md  config.yaml  diffs.txt  docker-entrypoint.sh  pom.xml  status.md
implementations/python/: Dockerfile  README.md  config.yaml  conftest.py  diffs.txt  docker-entrypoint.sh  gen_resolver_suite.py  generate.py  status.md  test_generate.py  test_resolver_suite.py  test_vectors.py
implementations/rust/: Cargo.toml  Dockerfile  README.md  config.yaml  diffs.txt  docker-entrypoint.sh  status.md
implementations/rust/src/: generate.rs  main.rs
implementations/ts/: Dockerfile  config.yaml  diffs.md  diffs.txt  status.md  tsconfig.json
scripts/: basic-update.yaml  key-rotation.yaml  portable-move.yaml  portable.yaml  pre-rotation-consume.yaml  run  run-all
vectors/basic-create/: resolutionResult.json  script.yaml
vectors/basic-update/: did.jsonl
vectors/deactivate/: resolutionResult.json  script.yaml
vectors/multi-update/: did.jsonl  resolutionResult.2.json  resolutionResult.json  script.yaml
vectors/multiple-update-keys/: script.yaml
vectors/negative-witness-update-threshold-not-met/: README.md  script.yaml
vectors/portable-move/: did.jsonl
(+214 files in other folders)
